@@ -121,6 +121,7 @@ class DateExtCalculationsTest < Test::Unit::TestCase
     assert_equal Date.new(2005,6,28), Date.new(2005,2,28).advance(:months => 4)
     assert_equal Date.new(2012,9,28), Date.new(2005,2,28).advance(:years => 7, :months => 7)
     assert_equal Date.new(2013,10,3), Date.new(2005,2,28).advance(:years => 7, :months => 19, :days => 5)
+    assert_equal Date.new(2005,2,28), Date.new(2004,2,29).advance(:years => 1) #leap day plus one year
   end
 
   def test_next_week
