@@ -80,6 +80,11 @@ class NumericExtTimeAndDateTimeTest < Test::Unit::TestCase
     assert_equal 30.days.to_i.since(@dtnow), 1.month.to_i.since(@dtnow)
     assert_equal 365.25.days.to_f.since(@dtnow), 1.year.to_f.since(@dtnow)    
   end
+  
+  def test_add_one_year_to_leap_day
+    assert_equal Time.utc(2005,2,28,15,15,10), Time.utc(2004,2,29,15,15,10) + 1.year
+    assert_equal DateTime.civil(2005,2,28,15,15,10), DateTime.civil(2004,2,29,15,15,10) + 1.year
+  end
 end
 
 class NumericExtDateTest < Test::Unit::TestCase
@@ -98,6 +103,10 @@ class NumericExtDateTest < Test::Unit::TestCase
   def test_chaining_duration_operations
     assert_equal @today.advance(:days => 2).advance(:months => -3), @today + 2.days - 3.months
     assert_equal @today.advance(:days => 1).advance(:months => 2), @today + 1.day + 2.months
+  end
+  
+  def test_add_one_year_to_leap_day
+    assert_equal Date.new(2005,2,28), Date.new(2004,2,29) + 1.year
   end
 end
 
